--- a/package.json
+++ b/package.json
@@ -1,15 +1,13 @@
 {
-  "name": "8d-audio-converter",
+  "name": "8d-audio-site-node",
   "version": "1.0.0",
-  "description": "Convert stereo audio to 8D rotating format",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
-    "ejs": "^3.1.9",
-    "multer": "^1.4.5-lts.1",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "multer": "^1.4.5"
   }
 }
